# MasterbotDEV

./: .gitignore  GEMINI.md  TERAX_2026_IMPLEMENTATION_PLAN.md  TERAX_2026_MASTER_PLAN.md  generate_project_details.py  project_details.md  update_imports.ts  update_lib_imports.ts
cli/: Cargo.toml
cli/src/: auth_storage.rs  main.rs
gemini-cli-0.41.2/: esbuild.config.js  package-lock.json
terax-ai-0.6.1/: .bunfig.toml  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI_INTEGRATION.md  LICENSE  README.md  RELEASE_NOTES.md  SECURITY.md  TERAX.md  checksums.txt  index.html  package.json  settings.html  tsconfig.json
terax-ai-0.6.1/.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
terax-ai-0.6.1/.github/workflows/: ci.yml  release.yml
terax-ai-0.6.1/scripts/: deploy-mac.sh  release.sh
terax-ai-0.6.1/src/: main.tsx
terax-ai-0.6.1/src-tauri/: Cargo.toml  Info.plist  build.rs  entitlements.macOS.plist  tauri.conf.json
terax-ai-0.6.1/src-tauri/src/: lib.rs  main.rs
terax-ai-0.6.1/src-tauri/src/modules/: mod.rs  secrets.rs
terax-ai-0.6.1/src-tauri/src/modules/auth/: commands.rs  keychain.rs  mod.rs  types.rs
terax-ai-0.6.1/src-tauri/src/modules/autocomplete/: commands.rs  types.rs
terax-ai-0.6.1/src-tauri/src/modules/context/: commands.rs  indexer.rs  mod.rs  retriever.rs  types.rs
terax-ai-0.6.1/src-tauri/src/modules/core/: watcher.rs
terax-ai-0.6.1/src-tauri/src/modules/fs/: file.rs
terax-ai-0.6.1/src-tauri/src/modules/graphify/: commands.rs  engine.rs  mod.rs  parser.rs  types.rs
terax-ai-0.6.1/src-tauri/src/modules/optimizer/: complexity.rs  mod.rs
terax-ai-0.6.1/src-tauri/src/modules/pty/: session.rs  shell_init.rs
terax-ai-0.6.1/src-tauri/src/modules/pty/scripts/: bashrc.bash  init.fish  profile.ps1  zlogin.zsh  zprofile.zsh  zshenv.zsh  zshrc.zsh
terax-ai-0.6.1/src-tauri/src/modules/shell/: session.rs
terax-ai-0.6.1/src-tauri/src/modules/storage/: commands.rs  database.rs  mod.rs  types.rs
terax-ai-0.6.1/src-tauri/src/modules/time_travel/: commands.rs  engine.rs  mod.rs  types.rs
terax-ai-0.6.1/src/app/: App.tsx
terax-ai-0.6.1/src/components/: WindowControls.tsx
terax-ai-0.6.1/src/components/ai-elements/: code-block.tsx  context.tsx  conversation.tsx  message.tsx  reasoning.tsx  shimmer.tsx  snippet.tsx  tool.tsx
terax-ai-0.6.1/src/components/ui/: alert-dialog.tsx  alert.tsx  button-group.tsx  card.tsx  command.tsx  context-menu.tsx  dialog.tsx  hover-card.tsx  input-group.tsx  input.tsx  item.tsx  label.tsx  menubar.tsx  popover.tsx  radio-group.tsx  select.tsx  sheet.tsx  slider.tsx  tabs.tsx  toggle-group.tsx  tooltip.tsx
terax-ai-0.6.1/src/modules/ai/: config.ts  index.ts
terax-ai-0.6.1/src/modules/ai/agents/: agent.ts  registry.ts  runSubagent.ts  subagents.ts
terax-ai-0.6.1/src/modules/ai/components/: AgentRunBridge.tsx  AgentStatusPill.tsx  AgentSwitcher.tsx  AiChat.tsx  AiInputBar.tsx  AiMiniWindow.tsx  AiStatusBarControls.tsx  AiToolApproval.tsx  PlanDiffReview.tsx  SelectionAskAi.tsx  SnippetPicker.tsx  TodoStrip.tsx
terax-ai-0.6.1/src/modules/ai/config/: legacy-providers.ts
terax-ai-0.6.1/src/modules/ai/context/: service.ts  store.ts  types.ts
terax-ai-0.6.1/src/modules/ai/core/: composer.tsx
terax-ai-0.6.1/src/modules/ai/engine/: auth.ts  gemini_types.ts  index.ts  keyring.ts  native.ts  session.ts  sessions.ts  slashCommands.ts  snippets.ts  todos.ts  types.ts
terax-ai-0.6.1/src/modules/ai/hooks/: useChat.ts  useInlineEdit.ts  useNativeChat.ts
terax-ai-0.6.1/src/modules/ai/lib/: agent.ts  sessions.ts
terax-ai-0.6.1/src/modules/ai/storage/: migrator.ts  repository.ts  sqlite.ts
terax-ai-0.6.1/src/modules/ai/store/: agentsStore.ts  chatStore.ts  planStore.ts  snippetsStore.ts  todoStore.ts
terax-ai-0.6.1/src/modules/ai/tools/: edit.ts  fs.ts  search.ts  shell.ts  subagent.ts  terminal.ts  (+1 more)
terax-ai-0.6.1/src/modules/core/: index.ts
terax-ai-0.6.1/src/modules/design/: engine.ts
terax-ai-0.6.1/src/modules/editor/: AiDiffPane.tsx  EditorPane.tsx  index.ts  types.ts
terax-ai-0.6.1/src/modules/explorer/: FileExplorer.tsx  FileTreeNode.tsx
terax-ai-0.6.1/src/modules/flow/: engine.ts  types.ts
terax-ai-0.6.1/src/modules/graphify/: index.ts  schema.json  types.ts
terax-ai-0.6.1/src/modules/header/: Header.tsx  SearchInline.tsx
terax-ai-0.6.1/src/modules/preview/: PreviewAddressBar.tsx  PreviewStack.tsx
terax-ai-0.6.1/src/modules/settings/: openSettingsWindow.ts  store.ts
terax-ai-0.6.1/src/modules/shortcuts/: ShortcutsDialog.tsx  index.ts  shortcuts.ts
terax-ai-0.6.1/src/modules/statusbar/: AiTools.tsx  CwdBreadcrumb.tsx  StatusBar.tsx
terax-ai-0.6.1/src/modules/tabs/: TabBar.tsx  index.ts
terax-ai-0.6.1/src/modules/terminal/: PaneTreeView.tsx  TerminalPane.tsx  TerminalStack.tsx  index.ts
terax-ai-0.6.1/src/modules/theme/: ThemeProvider.tsx
terax-ai-0.6.1/src/modules/updater/: UpdaterDialog.tsx  useUpdater.ts
terax-ai-0.6.1/src/settings/: SettingsApp.tsx  main.tsx
terax-ai-0.6.1/src/settings/components/: ProviderIcon.tsx  ProviderKeyCard.tsx  SettingRow.tsx
terax-ai-0.6.1/src/settings/sections/: AboutSection.tsx  AgentsSection.tsx  GeminiSection.tsx  GeneralSection.tsx  ModelsSection.tsx  ShortcutsSection.tsx
terax-ai-0.6.1/src/styles/: globals.css
(+110 files in other folders)
