[package]
name = "ccli"
version = "1.0.0-beta.1"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
oauth2 = { version = "5.0.0", features = ["reqwest"] }
tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
open = "5.3.5"
url = "2.5.8"
base64 = "0.22"
tiny_http = "0.12"
