[package]
name = "terax"
version = "0.6.1"
description = "Terax — an open-source AI-native terminal emulator"
authors = ["crynta"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "terax_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
notify = "6"
portable-pty = "0.9"
dirs = "5"
base64 = "0.22"
log = "0.4"
ignore = "0.4"
grep-regex = "0.1"
grep-searcher = "0.1"
grep-matcher = "0.1"
globset = "0.4"
shared_child = "1"
tauri-plugin-log = "2"
tauri-plugin-os = "2"
tauri-plugin-store = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
tree-sitter = "0.20"
tree-sitter-typescript = "0.20"
tree-sitter-javascript = "0.20"
walkdir = "2.4"
petgraph = "0.6"
rand = "0.8"
tauri-plugin-keychain = "2.0.2"
open = "5.3.5"
pkce = "0.2.0"
oauth2 = { version = "5.0.0", features = ["reqwest"] }
url = "2.5.8"
rusqlite = { version = "0.39.0", features = ["bundled"] }
chrono = { version = "0.4.44", features = ["serde"] }
tauri-plugin-fs = "2.5.1"
zstd = "0.13.3"
uuid = { version = "1.23.1", features = ["v4"] }
sqlite-vec = "0.1.9"
rayon = "1.12.0"
sha2 = "0.11.0"

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3.6", default-features = false, features = [
	"apple-native",
] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3.6", default-features = false, features = [
	"windows-native",
] }
windows-sys = { version = "0.59", features = [
	"Win32_Foundation",
	"Win32_Security",
	"Win32_System_JobObjects",
	"Win32_System_Threading",
] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-window-state = "2"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "s"
panic = "abort"
strip = true
